# A-Star-CPP-Testing

./: .gitignore  Ass3-Test-Case-ideas.txt  BadData.txt  CMakeLists.txt  CompletePath.txt  CompletedPath.txt  DeceivingPath.txt  InCompletePath.txt  InputDataFormat.txt  NoPath.txt  README.md  ass2-refactor.cpp  ass2-refactor.h  ass3-non-refactored.cpp  ass3-refactor.cpp  ass3-refactor.h  main.cpp
googletest/googletest/: googleTest.sln
googletest/googletest/Debug/: googleTest.ilk
googletest/googletest/googleTest/: Ass2-sample.txt  Ass3-Test-Case-ideas.txt  NoPath.txt  ass2-refactor.cpp  ass2.cpp  ass3-refactor.cpp  ass3-refactor.h  googleTest.vcxproj  main.cpp  test.cpp
googletest/googletest/googleTest/Debug/: googleTest.exe.recipe  googleTest.vcxproj.FileListAbsolute.txt
googletest/googletest/googleTest/Debug/googleTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  googleTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
googletest/googletest/googleTest/x64/Debug/: googleTest.exe.recipe  googleTest.vcxproj.FileListAbsolute.txt
googletest/googletest/googleTest/x64/Debug/googleTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog  googleTest.lastbuildstate  link.command.1.tlog  (+2 more)
googletest/googletest/x64/Debug/: googleTest.ilk
test/: CMakeLists.txt  CycleTest.cpp  Data.cpp  Graph.cpp  HeapTest.cpp  Heuristics.cpp  MissingData.cpp  SimTests.cpp  SystemTest.cpp  TestOracle.cpp  TestOracle.h  VerifyData.cpp
